testing/tests/ui/incorrect_path.stderr
error: template "thisdoesnotexist.html" not found in directories ["$WORKSPACE/target/tests/trybuild/askama_testing/templates"]
 --> tests/ui/incorrect_path.rs:4:19
  |
4 | #[template(path = "thisdoesnotexist.html")]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^
